test/src/e2e_vm_tests/test_programs/should_pass/language/import_star_submodules/src/main.sw
script;

mod foo;

use foo::*;

fn main() -> u64 {
    bar::func()
}
