test/src/e2e_vm_tests/test_programs/should_fail/multiple_impl_fns/src/main.sw
contract;

fn foo() {
}

fn foo() {
}

fn bar() {
}

fn bar<T>() {
}

fn main() {
}
